src/styles/main.scss
/* Third-party */
// Rack Status Graph
// TODO: Replace this with something maintained and testable
@import "vendor/d3.relationshipgraph.min.css";
// Bulmaswatch Theme
// TODO: Import the theme files and remove the package
// TODO: Make theme configurable
@import "bulmaswatch/superhero/bulmaswatch.scss";

// Bulma Extension
@import "bulma-tooltip/dist/css/bulma-tooltip.sass";

/* Partials */
@import "partials/spinner";
@import "partials/table";
@import "partials/toggle-switch";
@import "partials/transitions";

// Extend Bulma's panel-tabs class to wrap items
.panel-tabs {
	flex-wrap: wrap;
}

progress::-webkit-progress-value {
	-webkit-transition: width 1.5s ease;
	-moz-transition: width 1.5s ease;
	-o-transition: width 1.5s ease;
	transition: width 1s ease;
}

// overrides for d3.relationshipgraph.min.css
.relationshipGraph-block {
	stroke: none;
}

.panel-block.is-active {
	border-left-width: 4px;
	border-left-color: $primary;
}

.has-stroke-info {
	stroke: $info;
}

.has-stroke-success {
	stroke: $success;
}

.has-stroke-danger {
	stroke: $danger;
}

.navbar-dropdown ul > li {
	margin-left: 1em;
}

// move the first ul list back over
.navbar-dropdown ul:first-child {
	margin-left: -1em;
}

#device-editor-modal {
	input:focus:invalid + span.icon {
		background-color: $danger;

		i::before {
			content: "\f06a";
		}
	}

	input:focus:valid + span.icon {
		background-color: $success;

		i::before {
			content: "\f058";
		}
	}
}

.delete-token {
	&:hover {
		color: $red;
		cursor: pointer;
	}
}

// Modals
.modal-base {
	.modal-content {
		border-radius: 5px;
		width: 460px;

		.notification {
			padding: 1.5rem 1.5rem 1.25rem;

			.modal-icon {
				margin-bottom: 25px;
			}

			.title {
				margin-bottom: 20px;
			}

			.subtitle {
				padding: 10px;
				text-align: center;

				.name {
					color: $white;
				}

				&.margin-small {
					margin-bottom: 1rem;
				}
			}

			.field.has-switch {
				display: flex;
				align-items: center;
				justify-content: center;
				margin-bottom: 6px;

				.switch.is-large {
					margin-right: 8px;
				}

				.switch-text {
					width: 30px;
				}
			}
		}

		footer {
			.button {
				padding: 25px;

				i {
					margin-left: 10px;
				}
			}
		}
	}
}

.tokens {
	.header {
		display: flex;
		justify-content: space-between;
		align-items: center;
		margin-bottom: 20px;

		.subtitle {
			margin-bottom: 0;
		}

		button {
			border-radius: 4px;
		}
	}

	.card-content {
		padding: 0;

		thead {
			th {
				background-color: $grey-darker;
				border-width: 0 0 1px 0;

				&:first-of-type {
					border-top-left-radius: 5px;
				}

				&:last-of-type {
					border-top-right-radius: 5px;
				}
			}
		}

		tfoot {
			th {
				background-color: $grey-darker;
				border-top-width: 1px;

				&:first-of-type {
					border-bottom-left-radius: 5px;
				}

				&:last-of-type {
					border-bottom-right-radius: 5px;
				}
			}
		}

		.token {
			background-color: darken($grey-darker, 4%);
			transition: background-color 0.3s ease-in-out;

			&.create {
				input {
					background-color: $grey-dark;
					color: $grey-lighter;

					&::placeholder {
						color: $grey-lighter;
					}
				}

				td {
					.button {
						border-top-right-radius: 4px;
						border-bottom-right-radius: 4px;
					}
				}
			}

			.has-success-background {
				background-color: $green;
				transition: background-color 0.3s ease-in-out;
			}

			td {
				padding: 14px;
				white-space: nowrap;

				&:last-of-type {
					text-align: right;
				}

				&:first-of-type {
					width: 22px;
				}
			}
		}
	}
}

.session-notification {
	.message-header {
		padding: 0.6em 0.5em 0.6em 1.5em;
	}

	.message-body {
		padding: 0.5em 1.5em;
	}
}

.conch-versions {
	padding: 10px;

	.tags-container {
		display: flex;
		flex-direction: column;
		margin: 0 auto;

		.tags {
			display: inline-block;
			margin-bottom: 0;

			.tag {
				margin-bottom: 0;
			}

			&:first-of-type {
				margin-bottom: 5px;
			}
		}
	}
}

.page-not-found {
	hr {
		max-width: 474px;
	}

	.content {
		margin-top: 260px;
	}

	.title {
		font-size: 6rem;
	}

	.subtitle {
		margin-bottom: 30px;
	}

	.action {
		.text {
			margin: 25px 0;

			p:first-child() {
				margin-bottom: 0.25em;
			}
		}
	}

	.image {
		margin-top: 160px;
	}
}

.user-profile {
	section.content {
		margin-top: 0.75rem;

		.message-header {
			i {
				margin-right: 10px;
			}

			p {
				margin-bottom: 0;
			}
		}

		.button.save {
			margin-top: 0.75rem;
		}
	}

	.modal-card-body {
		padding: 0px;

		.message-body {
			p {
				margin-bottom: 20px;
			}
		}
	}
}

.user-management {
	li:not(:last-of-type) {
		margin-bottom: 5px;
	}

	select {
		background-color: $grey-darker;
		border-color: $grey;
		color: #bdcbdb;
	}

	.card-header-title {
		padding-bottom: 20px;
		padding-top: 20px;
	}

	.user-stats {
		&.box {
			border-color: #209cee;
			border-radius: 4px;
			border-width: 0 4px 0 4px;
			border-style: solid;
		}

		.tags {
			margin-bottom: 0;
			margin-right: 10px;

			.tag {
				margin-bottom: 0;
			}
		}
	}

	.user-modal {
		input {
			background-color: $grey-darker;
			border-color: $grey;
			color: #bdcbdb;

			&::placeholder {
				color: #bdcbdb;
			}
		}
	}

	.no-results {
		text-align: center;

		p.title {
			margin-top: 40px;
		}

		img {
			margin-top: 20px;
		}
	}

	.modal-content {
		border-radius: 5px;
	}

	.dropdown {
		.dropdown-content {
			background-color: lighten($grey-dark, 8%);
			border-radius: 5px;
		}

		.dropdown-item {
			padding: 6px 16px;

			&:hover {
				color: $white;
			}
		}

		hr.dropdown-divider {
			background-color: $grey-light;
		}
	}
}

a.button {
	border-radius: 4px;

	&.is-fullwidth {
		border-radius: inherit;
	}
}

button.button {
	&:not(.delete) {
		border-radius: 4px;
	}
}

input.input.search,
.select select {
	border-radius: 4px;
}

.authentication-tokens {
	section.content {
		margin-top: 0.75rem;
	}

	li:not(:last-of-type) {
		margin-bottom: 5px;
	}

	select {
		background-color: $grey-darker;
		border-color: $grey;
		color: #bdcbdb;
	}

	.auth-users-table {
		th {
			padding-left: 20px;
			padding-right: 20px;
		}

		td {
			padding: 20px;

			&:last-of-type {
				text-align: right;
			}

			button {
				&:first-of-type {
					margin-right: 5px;
				}
			}
		}

		tr {
			&.is-selected {
				background-color: lighten($grey-darker, 2%);
				border: 1px solid #209cee;
				border-width: 0 0 0 1px;
			}
		}
	}

	.toggle-switches {
		display: flex;
		justify-content: space-around;
	}

	.selected-user {
		&.box {
			border-color: #209cee;
			border-radius: 4px;
			border-width: 0 4px 0 4px;
			border-style: solid;
		}

		.tags {
			margin-bottom: 0;
			margin-right: 10px;

			.tag {
				margin-bottom: 0;
			}
		}
	}

	.no-results {
		text-align: center;

		p.title {
			margin-top: 40px;
		}

		img {
			margin-top: 20px;
		}
	}

	.user-search {
		input {
			background-color: $grey-darker;
			border-color: $grey;
			color: #bdcbdb;

			&::placeholder {
				color: #bdcbdb;
			}
		}
	}

	.user-authentication-tokens {
		.username {
			flex-grow: 1;
			margin-bottom: 0;
		}
	}

	.user-search-row {
		cursor: pointer;

		td {
			border: none;
			padding: 15px 10px;
		}

		&:hover {
			background-color: $grey-darker;
		}
	}
}

